--- a/CherryPy-3.7.0/ChatScreen/Chat.htm
+++ b/CherryPy-3.7.0/ChatScreen/Chat.htm
@@ -281,9 +281,9 @@ data-element_type="column" data-id="6e37b25">
 <DIV class="elementor-column-wrap elementor-element-populated">
 <DIV class="elementor-widget-wrap">
 
-<br><br><font color="white"><b>
+<br><br><font color="white"><center>
         <div w3-include-html-profile="/userprofiles/acha932.html"></div>
-</b></font>
+</center></font>
 
 
 <DIV class="elementor-element elementor-element-d7e0f3c elementor-button-align-stretch elementor-widget elementor-widget-form"
