--- a/CherryPy-3.7.0/ChatScreen/userprofiles/adwi888.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/adwi888.html
@@ -1,1 +1,1 @@
-{"picture": "", "last_updated": 1528107001, "description": "", "location": "", "position": "", "fullname": "Aman Dwivedi"}
+<html><br><b>UPI: </b>adwi888<br><b>Last Updated: </b>1528107001.0<br><b>Full Name: </b>Aman Dwivedi</html>
