--- a/CherryPy-3.7.0/ChatScreen/userprofiles/dfu987.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/dfu987.html
@@ -1,1 +1,1 @@
-{"picture": "https://vignette.wikia.nocookie.net/bayonetta/images/0/05/Doge.png/revision/latest?cb=20140807211510", "description": "idk", "encoding": "", "encryption": "", "lastUpdated": "", "location": "Nowhere", "position": "Student", "fullname": "Dylan Fu", "decryptionKey": ""}
+<html><br><b>UPI: </b>dfu987<br><b>Full Name: </b>Dylan Fu<br><b>Position: </b>Student<br><b>Desciption: </b>idk<br><b>Location: </b>Nowhere<br><b>Picture: </b>https://vignette.wikia.nocookie.net/bayonetta/images/0/05/Doge.png/revision/latest?cb=20140807211510</html>
