--- a/CherryPy-3.7.0/ChatScreen/userprofiles/jkin677.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/jkin677.html
@@ -1,1 +1,1 @@
-{"picture": "DatabaseLogo.png", "lastUpdated": "1528177644.51", "description": null, "encoding": null, "position": "Pleb", "fullname": "jono king", "encryption": null, "decryptionKey": null, "location": null}
+<html><br><b>UPI: </b>jkin677<br><b>Last Updated: </b>1528196834.16<br><b>Full Name: </b>jono king<br><b>Position: </b>Pleb<br><b>Picture: </b>DatabaseLogo.png</html>
