--- a/CherryPy-3.7.0/ChatScreen/userprofiles/dcho415.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/dcho415.html
@@ -1,1 +1,1 @@
-<html><br><img src=http://10.103.137.40:10001/static/files/dcho415_dcho415 height="150" width="150" /><br><br><b>UPI: </b>dcho415<br><b>Last Updated: </b>1528278200.75<br><b>Full Name: </b>cC<br><b>Position: </b>C<br><b>Desciption: </b>xc<br><b>Location: </b>xcZ</html>
+<html><br><img src=http://10.103.137.40:10001/static/files/dcho415_dcho415.jpg height="150" width="150" /><br><br><b>UPI: </b>dcho415<br><b>Last Updated: </b>1528327863.4<br><b>Full Name: </b>Darin Choi<br><b>Position: </b>Student<br><b>Location: </b>Uni</html>
