--- a/CherryPy-3.7.0/ChatScreen/userprofiles/ilee471.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/ilee471.html
@@ -1,1 +1,1 @@
-<html><br><img src=http://172.23.9.219:10002/static/national-party-religious-instruction-policy.png height="150" width="150" /><br><br><b>UPI: </b>ilee471<br><b>Last Updated: </b>1528269096.35<br><b>Full Name: </b>Kevin Lee<br><b>Position: </b>Student<br><b>Desciption: </b>Hi!<br><b>Location: </b>UoA</html>
+<html><br><img src=static/whitesquare.jpg height="150" width="150" /><br><br><b>UPI: </b>ilee471<br><b>Last Updated: </b>1528328130.21<br><b>Full Name: </b>(No Name)</html>
