--- a/CherryPy-3.7.0/ChatScreen/userprofiles/jven054.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/jven054.html
@@ -1,1 +1,1 @@
-<html><br><br><b>UPI: </b>jven054</html>
+<html><br><img src=None height="150" width="150" /><br><br><b>UPI: </b>jven054<br><b>Last Updated: </b>1528332377.3<br><b>Full Name: </b>My Full Name<br><b>Position: </b>Student<br><b>Desciption: </b>hello<br><b>Location: </b>1</html>
