--- a/CherryPy-3.7.0/ChatScreen/userprofiles/kkim534.html
+++ b/CherryPy-3.7.0/ChatScreen/userprofiles/kkim534.html
@@ -1,1 +1,1 @@
-<html><br><br><b>UPI: </b>kkim534<br><b>Last Updated: </b>1528270228.95<br><b>Full Name: </b>Alex Kim<br><b>Position: </b>Intern<br><b>Desciption: </b>Life sucks<br><b>Location: </b>UG</html>
+<html><br><img src=http://0.0.0.0:10000/Files/XXX_Danny_Brown.jpg height="150" width="150" /><br><br><b>UPI: </b>kkim534<br><b>Last Updated: </b>1528329106.56<br><b>Full Name: </b>Alex Kim<br><b>Position: </b>hi<br><b>Desciption: </b>test<br><b>Location: </b>yo</html>
